RESOLVED FIXED 251438
REGRESSION(241899@main): Find on Page fails to highlight SVG text content
https://bugs.webkit.org/show_bug.cgi?id=251438
Summary REGRESSION(241899@main): Find on Page fails to highlight SVG text content
zalan
Reported 2023-01-31 08:50:39 PST
Attachments
Patch (1.61 KB, patch)
2023-01-31 09:11 PST, zalan
no flags
zalan
Comment 1 2023-01-31 09:11:18 PST
zalan
Comment 2 2023-01-31 09:12:47 PST
Need to come up with a test case.
EWS
Comment 3 2023-02-02 07:59:31 PST
Committed 259753@main (7289c5d771f2): <https://commits.webkit.org/259753@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 464780 [details].
Note You need to log in before you can comment on or make changes to this bug.