Cherry-pick 7289c5d771f2. rdar://problem/101874893

REGRESSION(241899@main): Find on Page fails to highlight SVG text content
    https://bugs.webkit.org/show_bug.cgi?id=251438

    Reviewed by Antti Koivisto.

    Let's restore before-241899@main state, where we called SVGInlineTextBox::localSelectionRect on SVG text content.

    * Source/WebCore/layout/integration/inline/InlineIteratorTextBox.cpp:
    (WebCore::InlineIterator::TextBox::selectionRect const):

    Canonical link: https://commits.webkit.org/259753@main

Canonical link: https://commits.webkit.org/259548.170@safari-7615-branch